# giza-sdk

./: README.md  pyproject.toml
.github/workflows/: onrelease.yml
